--- a/extension.toml
+++ b/extension.toml
@@ -3,7 +3,7 @@ name = "Ansible Language Server"
 version = "0.0.1"
 schema_version = 1
 
-description = "Ansible Language Server extension for Zed."
+description = "Ansible language server support for Zed.\nFor the best experience, please find the recommended settings in the extension project's README."
 authors = ["Kartik Vashistha <kartikv.work@gmail.com>"]
 repository = "https://github.com/kartikvashistha/zed-ansible"
 
@@ -11,10 +11,6 @@ repository = "https://github.com/kartikvashistha/zed-ansible"
 name = "Ansible"
 language = "Ansible"
 
-# [grammars.yaml]
-# repository = "https://github.com/ikatyang/tree-sitter-yaml"
-# commit = "0e36bed171768908f331ff7dff9d956bae016efb"
-
-# [grammars.yaml]
-# repository = "https://github.com/zed-industries/tree-sitter-yaml"
-# commit = "f545a41f57502e1b5ddf2a666889V6c1b0620f930"
+[grammars.yaml]
+repository = "https://github.com/tree-sitter-grammars/tree-sitter-yaml"
+commit = "7b03feefd36b5f155465ca736c6304aca983b267"
