test: comment out grammary table entry from extension.toml

--- a/extension.toml
+++ b/extension.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/kartikvashistha/zed-ansible"
 name = "Ansible"
 language = "Ansible"
 
-[grammars.yaml]
-repository = "https://github.com/tree-sitter-grammars/tree-sitter-yaml"
-commit = "7b03feefd36b5f155465ca736c6304aca983b267"
+# [grammars.yaml]
+# repository = "https://github.com/zed-industries/tree-sitter-yaml"
+# rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a"
+# commit = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a"
