--- a/extension.toml
+++ b/extension.toml
@@ -1,9 +1,9 @@
 id = "ansible"
-name = "Ansible Language Server"
-version = "0.1.1"
+name = "Ansible"
+version = "0.1.2"
 schema_version = 1
 
-description = "Ansible language server support for Zed. For the best experience, please find the recommended settings in the extension project's README."
+description = "Ansible support for Zed. For the best experience, please find the recommended settings in the extension project's README."
 authors = ["Kartik Vashistha <kartikv.work@gmail.com>"]
 repository = "https://github.com/kartikvashistha/zed-ansible"
 
